# chaoxing

./: .gitignore  README.md
.github/workflows/: desktop-ci.yml  release-desktop.yml
chaoxing-desktop/: index.html  package.json  pnpm-lock.yaml
chaoxing-desktop/src/: App.tsx  main.tsx
chaoxing-desktop/src-tauri/: Cargo.toml  tauri.conf.json
chaoxing-desktop/src-tauri/capabilities/: default.json
chaoxing-desktop/src-tauri/icons/: icon.icns
chaoxing-desktop/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
chaoxing-desktop/src-tauri/src/api/: auth.rs  captcha.rs  client.rs  course.rs  course_card.rs  course_point.rs  document.rs  empty_page.rs  live.rs  mod.rs  read.rs  topic.rs  video.rs  work.rs
chaoxing-desktop/src-tauri/src/commands/: auth.rs  config.rs  course.rs  mod.rs  notification.rs  task.rs  tiku.rs  topic.rs
chaoxing-desktop/src-tauri/src/crypto/: aes.rs  enc.rs  inf_enc.rs  mod.rs
chaoxing-desktop/src-tauri/src/font/: decoder.rs  glyph.rs  hash_dao.rs  mod.rs  radicals.rs
chaoxing-desktop/src-tauri/src/models/: account.rs  chapter.rs  config.rs  course.rs  events.rs  job.rs  mod.rs  topic.rs  video.rs  work.rs
chaoxing-desktop/src-tauri/src/notification/: bark.rs  mod.rs  qmsg.rs  serverchan.rs  telegram.rs
chaoxing-desktop/src-tauri/src/parser/: course_card.rs  course_folder.rs  course_list.rs  course_point.rs  mod.rs  questions.rs
chaoxing-desktop/src-tauri/src/task/: chapter.rs  job.rs  live_processor.rs  mod.rs  scheduler.rs
chaoxing-desktop/src-tauri/src/tiku/: adapter.rs  ai.rs  answer_check.rs  cache.rs  like.rs  mod.rs  siliconflow.rs  yanxi.rs
chaoxing-desktop/src-tauri/src/utils/: account_vault.rs  cookie.rs  decode.rs  log_bridge.rs  mod.rs  rate_limiter.rs
chaoxing-desktop/src/components/Layout/: AppLayout.tsx
chaoxing-desktop/src/components/topic/: ComposeTopicModal.tsx
chaoxing-desktop/src/components/ui/: appleUI.tsx  (+1 more)
chaoxing-desktop/src/hooks/: useTauriEvent.ts
chaoxing-desktop/src/routes/: AboutPage.tsx  CourseTaskSelectPage.tsx  CourseTopicsPage.tsx  CoursesPage.tsx  LoginPage.tsx  SettingsPage.tsx  TaskPage.tsx
chaoxing-desktop/src/stores/: authStore.ts  configStore.ts  courseStore.ts  taskStore.ts  topicStore.ts
chaoxing-desktop/src/theme/: apple.css  appleTokens.ts
chaoxing-desktop/src/types/: config.ts  course.ts  task.ts  topic.ts
